objects/box__BoxSign_Signer_Input__c/fields/box__BoxSign_Signer__c.field-meta.xml
<CustomField>
    <fullName>box__BoxSign_Signer__c</fullName>
    <label>Box Sign Signer</label>
    <referenceTo>box__BoxSign_Signer__c</referenceTo>
    <relationshipLabel>Box Sign Signer Inputs</relationshipLabel>
    <relationshipName>BoxSign_Signer_Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>