objects/box__BoxSign_Signer_Input__c/fields/box__Checkbox_Value__c.field-meta.xml
<CustomField>
    <fullName>box__Checkbox_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Value</label>
    <type>Checkbox</type>
</CustomField>