objects/box__BoxSign_Signer_Input__c/fields/box__Exception__c.field-meta.xml
<CustomField>
    <fullName>box__Exception__c</fullName>
    <description>This field is used to describe errors that occur within the Box for Salesforce and Sign integration. For example, during the Salesforce write back (flow template) if it fails to write to the salesforce record, an error should be displayed here.</description>
    <inlineHelpText>This field is used to describe errors that occur within the Box for Salesforce and Sign integration.</inlineHelpText>
    <label>Exception</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>