objects/box__BoxSign_Signer_Input__c/fields/box__External_Id__c.field-meta.xml
<CustomField>
    <fullName>box__External_Id__c</fullName>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>