objects/box__BoxSign_Signer_Input__c/fields/box__Page_Index__c.field-meta.xml
<CustomField>
    <fullName>box__Page_Index__c</fullName>
    <label>Page Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>