objects/box__BoxSign_Signer_Input__c/fields/box__Type__c.field-meta.xml
<CustomField>
    <fullName>box__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>