objects/box__BoxSign_Signer_Input__c/fields/box__Type_Code__c.field-meta.xml
<CustomField>
    <fullName>box__Type_Code__c</fullName>
    <description>Code for the input type: &apos;s&apos; (signature input), &apos;t&apos; (text input), &apos;d&apos; (date input) or &apos;c&apos; (checkbox input)</description>
    <label>Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>